Responsive tweaks. Fixed overlapping back button. More reach style server list

--- a/client/views/css/Responsive.less
+++ b/client/views/css/Responsive.less
@@ -48,6 +48,7 @@
 	}
 }
 
-.md-snackbar {
+body .md-snackbar.md-snackbar-full {
 	top: 0;
+	bottom: initial;
 }
